--- a/site/inicio.html
+++ b/site/inicio.html
@@ -7,7 +7,7 @@
     <title>Inicio Entrena</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="/Resources/Static/styles/inicio.css">
+    <link rel="stylesheet" href="estilos/inicio.css">
 </head>
 
 <body>
